# django-dbbackup

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
dbbackup/: __init__.py  checks.py  log.py  settings.py  storage.py  utils.py
dbbackup/db/: base.py  django.py  mongodb.py  mysql.py  postgresql.py  sqlite.py
dbbackup/management/commands/: _base.py  dbbackup.py  dbrestore.py  listbackups.py  mediabackup.py  mediarestore.py
dbbackup/tests/: test_utils.py
develop/: 404.html  dictionary.txt  index.html  sitemap.xml
develop/changelog/: index.html
develop/commands/: index.html
develop/configuration/: index.html
develop/contributing/: index.html
develop/databases/: index.html
develop/installation/: index.html
develop/integration/: index.html
develop/license/: index.html
develop/search/: search_index.json
develop/signals/: index.html
develop/storage/: index.html
docs/: changelog.md  configuration.md  contributing.md  index.md  installation.md  integration.md  mkdocs.yml  storage.md
docs/src/: commands.md  configuration.md  contributing.md  databases.md  dictionary.txt  index.md  installation.md  integration.md  signals.md  storage.md
docs/src/assets/css/: main.css
requirements/: docs.txt  tests.txt
scripts/: _utils.py  postgres_live_test.py  sqlite_live_test.py
tests/: conftest.py  settings.py  test_checks.py  test_init.py  test_log.py  test_settings.py  test_signals.py  test_storage.py  test_user_metadata.py  test_utils.py  utils.py
tests/commands/: test_base.py  test_dbbackup.py  test_dbrestore.py  test_dbrestore_metadata.py  test_listbackups.py  test_mediabackup.py  test_mediarestore.py
tests/functional/: test_commands.py
tests/test_connectors/: test_base.py  test_django.py  test_mongodb.py  test_mysql.py  test_postgresql.py  test_sqlite.py
tests/testapp/management/commands/: count.py  feed.py
